# ElasticFusion

./: .gitignore  GL Uses.txt  _cmake_cg.sh  build.sh  build_core_gui.sh  cg_build.sh  create_dependencies.sh  create_graph.sh  remove_all_build_files.sh  rm_builds.sh  run_dataset.sh  run_sv_ef.sh  sw_rebuild.sh  test_all.sh  xecute.sh
Core/src/: CMakeLists.txt  CudaComputeTargetFlags.cmake  Deformation.cpp  Deformation.h  ElasticFusion.cpp  ElasticFusion.h  Ferns.cpp  FindSuiteSparse.cmake  FindSuiteSparse.cmake.old  GPUTexture.h  GlobalModel.cpp  GlobalModel.h  IndexMap.cpp  IndexMap.h
Core/src/Cuda/: reduce.cu  reduce.cu.old
Core/src/Shaders/: ComputePack.cpp  ComputePack.h  FeedbackBuffer.cpp  FeedbackBuffer.h  FillIn.cpp  copy_unstable.geom  draw_global_surface.geom  surfel_ids.geom  surfel_ids.vert
Core/src/Utils/: DeformationGraph.cpp  GPUConfig.h  RGBDOdometry.cpp  RGBDOdometry.cpp.worse  Resolution.cpp  Resolution.h
GUI/src/: CMakeLists.txt  FindSuiteSparse.cmake  MainController.cpp  MainController.cpp.old  switch_gui.sh
GUI/src/Tools/: GUI.h  LiveLogReader.cpp  LogReader.h  RawLogReader.cpp  RawLogReader.h
other_scripts/: download_dyson_klg.sh  install_stopwatch.sh  plotter.py  test_run.sh
